# AUTO-DPR

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  serve_ui.py  server.py  setup_mac.command  setup_win.bat  status.html
.streamlit/: config.toml
config/: configuration.py
desktop_app/: README.md  launch.py  main_window.py  requirements.txt
excel_files/: DPR.xlsx  ~$DPR.xlsx
src/: llm_result.py  main.py  prompt.py  sheet_data_fetch.py
utils/: logger.py
