[project]
name = "dpr"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.7.1",
    "aiohttp>=3.12.13",
    "audio-recorder-streamlit>=0.0.10",
    "fastapi>=0.115.14",
    "fastmcp>=2.10.1",
    "groq>=0.29.0",
    "mcp>=1.10.1",
    "numba>=0.61",
    "numpy>=1.24.0",
    "openai>=1.93.0",
    "openai-agents[viz,voice]>=0.1.0",
    "openai-whisper>=20250625",
    "openpyxl>=3.1.2",
    "pandas>=2.3.0",
    "psutil>=7.0.0",
    "pyaudio>=0.2.13",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.3.6",
    "pydantic-ai-slim[groq]>=0.3.6",
    "pydantic-settings>=2.10.1",
    "pydub>=0.25.1",
    "pyqt5>=5.15.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "streamlit-extras>=0.7.5",
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = [
    "Real-Time-GenAI-Teleprompter",
]
